<resources>
    <string name="app_name">Memorigilo</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Up</string>
    <string name="ok">OK</string>

    <string name="title_activity_settings">Settings</string>
    <string name="remind">Remind</string>

    <string name="medicine">Medicine</string>
    <string name="others">Others</string>

    <string name="set_time">Set Time</string>
    <string name="set_meals">Set meals</string>


    <string name="breakfast">Breakfast</string>
    <string name="second_breakfast">Second breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="pre_supper">Pre supper</string>
    <string name="supper">Supper</string>
    <string name="returnset">Return</string>

    <string name="delete">Delete</string>

    <!-- List of meals  -->
    <string-array name="meals">
        <item>@string/breakfast</item>
        <item>@string/second_breakfast</item>
        <item>@string/dinner</item>
        <item>@string/pre_supper</item>
        <item>@string/supper</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="alarmVolume">Alarm volume</string>
    <string name="alarmSignal">Alarm signal</string>
    <string name="alarmTime">Time alarm</string>
    <string name="manual">Manual</string>

    <string name="alarmTime15">15 seconds</string>
    <string name="alarmTime30">30 seconds</string>
    <string name="alarmTime60">minute</string>
    <string name="alarmTimeOff">Turned off</string>

    <string name="select">Select</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="eventList">Event list</string>
    <string name="digitalclock">DigitalClock</string>
    <string name="ustawienia">Settings</string>
    <string name="pory_posilkow">Meal times</string>
    <string name="kolorystyka">Color</string>
    <string name="ciemny">Dark</string>
    <string name="jasny">Bright</string>
    <string name="ustaw_d_wi_k">Set sound</string>
    <string name="lista_alarm_w">Alarm list</string>
    <string name="ustaw_alarm">Set an alarm</string>
    <string name="listtodo">TODO</string>
    <string name="do_posilku">With a meal</string>
    <string name="do_zegara">To the clock</string>
    <string name="todo">TODO</string>
    <string name="instrukcja">Instruction</string>
    <string name="jezyk">Język</string>
</resources>
