<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/settingsB"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/alarmVolumeT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarmVolume" />

                <SeekBar
                    android:id="@+id/alarmVolumeS"
                    android:layout_width="196dp"
                    android:layout_height="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/alarmSignalT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarmSignal" />

                <TextView
                    android:id="@+id/alarmSignalNameT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/alarmSignalB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/alarmTimeT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarmTime" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/alarmTimeC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="345dp" >

                <Button
                    android:id="@+id/setMealsB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_meals" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="345dp" >

                <Button
                    android:id="@+id/manualB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual" />
            </TableRow>
        </TableLayout>

    </FrameLayout>
</LinearLayout>