<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/settingsB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/title_activity_settings" />

        <DigitalClock
            android:id="@+id/digitalClock1"
            android:layout_width="330dp"
            android:layout_height="161dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="70dp"
            android:text="DigitalClock"
            android:textSize="106sp" />

        <Button
            android:id="@+id/remindB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remind"
            android:textSize="40sp" />

        <Button
            android:id="@+id/remindListB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventList"
            android:textSize="40sp" />

        <Button
            android:id="@+id/mainManualB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/manual" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
